# niche-lens-st

./: .gitignore  BASELINE_REFERENCES.md  CITATION.cff  CLAIM_LEDGER.md  CONTRIBUTING.md  LITERATURE_LINKS.md  README.md  REFERENCES_AND_DATASETS.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug.yml  docs.yml  feature.yml
.github/workflows/: ci.yml
baseline_repos/: README.md
data/: scalability_declared_regimes.json
data/cards/: abc_atlas_zhuang_merfish.yaml  cosmx_brain_frontal_cortex.yaml  cosmx_nsclc_nanostring.yaml  cosmx_wtx_colon.yaml  gse208253_oscc_visium.yaml  gse293199_tnbc_xenium.yaml  ligrec_omnipath.yaml  merfish_hypothalamus_moffitt.yaml  merfish_hypothalamus_shared.yaml  merfish_mouse_brain_receptor_map.yaml  seqfish_embryo_shared.yaml  seqfish_mouse_embryo_lohoff.yaml  vizgen_ffpe_io_merfish.yaml  wang2025_matched_tma.yaml  xenium_breast_janesick.yaml  xenium_lymph_node.yaml  xenium_prime_5k_cancer.yaml  xenium_skin_melanoma.yaml
docs/: ALLOWED_BASELINE_CONTEXTS.md  DATASETS.md  DRAFT_REVIEW_SUMMARY.md  ENV_AND_SMOKE_TEST.md  EVALUATION_PROTOCOL.md  INDEPENDENCE_AND_LEAKAGE_AUDIT.md  LICENSE_NOTES.md  MVP_DESIGN.md  NAME_AND_BRAND_REVIEW.md  PROVENANCE_CHECKLIST.md  SYNTHETIC_BENCHMARK.md
manuscript/: DRAFT.md  LITERATURE_LINKS.md  README.md  refs.bib
results/: README.md
results/paper_metrics/: README.md  leaderboard.csv  leaderboard.json  leaderboard.md  n-f1_metrics_stub.json  n-f2_metrics_stub.json  n-t1_metrics_stub.json  niche_stability.csv  niche_stability.json  niche_stability_seeds_fallback.json  scalability_table.csv  scalability_table.json  scalability_table.md
scripts/: check_independence.sh  compute_further_niche_metrics.py  compute_niche_stability.py  emit_figures.py  emit_results_tables.py  emit_scalability_table.py  emit_stability_figure.py  plot_niche_results.py  run_baselines_niche.py  run_real_niche.py  run_synthetic_metrics.py  sweep_niche.py
scripts/data/: fetch_datasets.py  registry.py
src/: README.md
src/nichelens_st/: __init__.py  annotation.py  baselines.py  communication.py  encoder.py  graph.py  metrics.py  model.py  outcome.py  results_contract.py  results_contract.sha256  schemas.py  stability.py
src/nichelens_st.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nichelens_st/synth/: __init__.py  ccc.py  generator.py
tests/: README.md  test_annotation.py  test_baselines.py  test_baselines_diffusion.py  test_card_section_id_accessor.py  test_clustering.py  test_composition_baseline.py  test_conserved_fraction.py  test_contract_schema.py  test_data_cards_yaml.py  test_embedding_reproducibility.py  test_emit_figures.py  test_emit_results_tables.py  test_emit_scalability_table.py  test_emit_stability_figure.py  test_encoder.py  test_encoder_minibatch.py  test_fallback_detection_from_notes.py  test_fetch_data_extra_guard.py  test_fit.py  test_generator.py  test_graph.py  test_graph_no_dead_code.py  test_independence_guard.py  test_infonce_batch_switch.py  test_infonce_minibatch_labels.py  test_infonce_negatives.py  test_interaction_summary.py  test_kmeans_determinism.py  test_leaderboard_artifact_consistency.py  test_leaderboard_baseline_discovery.py  test_metrics.py  test_metrics_ami_macrof1.py  test_metrics_soundness.py  test_model_gated_import.py  test_model_outputs.py  test_outcome.py  test_packaging_contract.py  test_paper_metric_stubs.py  test_pytest_collection_contract.py  (+12 more)
tests/smoke/: test_import.py  test_plot_niche_results.py  test_st_omics_sanity.py
tests/synth/: test_ccc_scorer.py  test_ccc_truth.py  test_generator_determinism.py  test_niche_recovery_metrics.py  test_partition_agreement_metrics.py  test_proto_kind.py  test_proto_kind_metrics.py  test_shapes.py  test_small_sections.py  test_spatial_coherence_metrics.py  test_spatial_coherence_of_generated_truth.py
