[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nichelens-st"
version = "0.0.0.dev0"
description = "Contrastive graph learning of cellular niches in spatial transcriptomics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PeterPonyu", email = "fuzeyu09@gmail.com" }]
dependencies = ["numpy>=1.26,<3"]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/PeterPonyu/niche-lens-st"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
