[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nichelens-st"
version = "0.0.0.dev0"
description = "NicheLens-ST: contrastive graph learning of cellular niches in spatial transcriptomics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PeterPonyu", email = "fuzeyu09@gmail.com" }]
dependencies = ["numpy>=1.26,<3", "scipy>=1.11,<2"]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
# Optional deep-learning extra for the contrastive niche encoder
# (nichelens_st.model / nichelens_st.encoder). The base package stays
# dependency-light (numpy/scipy) and imports without torch; the encoder import
# is gated and raises a clear error only when the model is actually run.
# torch-geometric / jax are intentionally NOT used: message passing is
# expressed with plain-torch scatter (index_add_) over the subgraph edge lists.
model = ["torch>=2,<3"]

[project.urls]
Homepage = "https://github.com/PeterPonyu/niche-lens-st"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src-layout: make `python -m pytest` work on a fresh checkout without
# requiring `pip install -e .` first (issue #79). pytest >= 8 (declared
# above) honors `pythonpath` natively.
pythonpath = ["src"]
